--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <p>Never use an unsecure password again.</p>
         <button id="generate-password">Generate Passwords</button>
         <div style="border-bottom: 1px solid lightgray;"></div>
-        <button id="password1" disabled>P</button>
-        <button id="password2" disabled>P</button>
+        <div id="password-container">
+            <div id="password1">&nbsp;</div>
+            <div id="password2">&nbsp;</div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
